ajout de navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 <body>
   <!--My navbar-->  
     <nav class="nav">
-
+        <a href="#" class="logo">Wibbitz</a>
+        <ul>
+            <li><a href="#">Articles</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Reports</a></li>
+            <li><a href="#">Customers stories</a></li>
+        </ul>
+        <form action="" >
+            <input type="text">
+            <button type="submit" class="btn-search">Suscribe</button>
+        </form>
     </nav>
     <!--Box content-->
     <div class="box-content">
